correct spacing and wrapping for team section

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -391,4 +391,5 @@ body {
 /* http://stackoverflow.com/questions/25598728/irregular-bootstrap-column-wrapping */
 .portrait-div {
     height: 250px;
+    padding: 50px 10px;
 }
